Major changes to the structure: Refactor CMake configuration and enhance main program structure with new header and source files. Main.c created and an user interface to run different exercises with ease and one CMakeLists is implemented. README updated with instructions how to use.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,26 @@
-cmake_minimum_required(VERSION 4.1.1)
+cmake_minimum_required(VERSION 3.12)
 project(C_programming_K26)
 
 set(CMAKE_CXX_STANDARD 20)
 
+#set(Week_1"Week_1/*.c")
+#set(Week_2"Week_2/*.c")
+
 add_executable(C_programming_K26
+    #Week_1
+    #Week_2
     "Week_1/Week1_T1.c"
     "Week_1/Week1_T2.c"
     "Week_1/Week1_T3.c"
-    "Week_2/Week2_T1.c"
-    "Week_2/Week2_T2.c"
-    "Week_2/Week2_T3.c"
+    "Week_2/Week2_T4.c"
+    "Week_2/Week2_T5.c"
+    "Week_2/Week2_T6.c"
+    "C:/Users/tuuli/CLionProjects/My_C_header/My_C_header.c"
+        main.c
 )
 target_include_directories(${PROJECT_NAME} PRIVATE
     Own_headers
  #"C:\\Users\\tuuli\\CLionProjects\\Own_headers"
-        "C:/Users/tuuli/CLionProjects/Own_headers"
+        #"C:/Users/tuuli/CLionProjects/Own_headers"
         "C:/Users/tuuli/CLionProjects/My_C_header"
 )
