Add My_C_header submodule and update CMakeLists to reference local path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ add_executable(C_programming_K26
     "Week_2/Week2_T4.c"
     "Week_2/Week2_T5.c"
     "Week_2/Week2_T6.c"
-    "C:/Users/tuuli/CLionProjects/My_C_header/My_C_header.c"
+    "My_C_header/My_C_header.c"
         main.c
         Week_3/Week3_T7.c
         Week_3/Week3_T7.h
